# impulse

./: .gitignore  LICENSE  README.md  open_maya_test.py  profile_output  pyproject.toml  setup_environment.sh
.zed/: debug.json
impulse/: __init__.py
impulse/components/: __init__.py  iris.py
impulse/components/eye/: __init__.py  eyelid.py  iris.py
impulse/maya_api/: __init__.py  attribute.py  node.py
impulse/resources/: __init__.py
impulse/resources/control_shapes/: circle.json  round_square.json  triangle.json
impulse/utils/: __init__.py  basic_ribbon.py  color.py  control.py  deformer.py  ik.py  math.py  naming.py  pin.py  pose_interpolator.py  ribbon.py  skin.py  spline.py  symmetry.py  transform.py  vertex_color.py
impulse/utils/color/: __init__.py  bake.py  convert.py  core.py  gradient.py
impulse/utils/control_shapes/: diamond.json  hexagon.json  locator.json
impulse/utils/spline/: __init__.py  math.py  matrix_spline.py  maya_query.py
impulse/utils/spline/matrix_spline/: __init__.py  build.py  core.py
nxt/: base.nxt  bird.nxt  cleanup.nxt  components.nxt  crab.nxt  king.nxt  setup.nxt  tools.nxt
nxt_layers/: matrix_spline.nxt
structs/: __init__.py  transform.py
utils/: __init__.py  basic_ribbon.py  control.py  control_gen.py  ik.py  math.py  pin.py  ribbon.py  skin.py  spline.py  transform.py  uv_pin.py
utils/control_shapes/: cube.json  sphere.json  square.json
