[project]
name = "impulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
]
[tool.ruff]
line-length = 100

[tool.pyright]
extraPaths = [
    "./.stubs/",
    "/usr/autodesk/ApplicationPlugins/ngskintools2/Contents/scripts"
]
typeCheckingMode = "off"

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "maya-stubs>=0.4.2",
    "ruff>=0.14.10",
]
